# riverwm-utils

./: .pylintrc  README.md  requirements.txt  setup.cfg  setup.py
riverwm_utils/: riverwm_utils.py
src/: cycle_focused_tags.py  riverwm_utils.py
