[metadata]
name = riverwm-utils
version = 0.0.9
author = Nick Hastings
author_email = nicholaschastings@gmail.com
description = Utilities for the River Wayland compositor
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
url = https://github.com/NickHastings/riverwm-utils
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pywayland >=0.4.7

[options.entry_points]
console_scripts =
    cycle-focused-tags = riverwm_utils.riverwm_utils:cycle_focused_tags

[options.package_data]
riverwm_utils =
  *.xml
